src/test/deca/codegen/invalid/custom/cast.res
je suis un animal
coin coin
coin coin
Error: Impossible Cast
